fixed dark mode hover styles for outlined primary button, font weight, ohm menu font sizing and divider fix

--- a/src/views/ChooseBond/choosebond.scss
+++ b/src/views/ChooseBond/choosebond.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   overflow: hidden;
   .ohm-card .bond-hero h4 {
-    font-weight: 500 !important;
+    font-weight: 600 !important;
   }
   .ohm-logo-bg {
     margin-left: 0;
@@ -43,7 +43,7 @@
       }
     }
     .data-row {
-      margin-bottom: 20px;
+      margin-bottom: 13px;
     }
     .bond-link {
       margin-top: 10px;
@@ -52,6 +52,10 @@
         width: 96%;
       }
     }
+  }
+
+  .MuiTable-root {
+    margin: 10px 0px;
   }
 
   .MuiTableRow-head {
